--- a/service/pom.xml
+++ b/service/pom.xml
@@ -52,7 +52,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <scope>runtime</scope>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.dropwizard.modules</groupId>
