Add associated tags.

--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@
           <excludes>
             <exclude>**/README</exclude>
             <exclude>**/LICENSE</exclude>
+            <exclude>eclipse-formatter.xml</exclude>
           </excludes>
         </configuration>
         <executions>
